# income_expense_tracker-FastAPI-

./: pyproject.toml
alembic/: env.py
alembic/versions/: 0eba3dcd5f93_initial_migration.py  fd64b4ccb8be_add_description_and_author_fields_to_.py
income_expense_tracker/: crud.py  main.py
income_expense_tracker/db/: database.py  models.py
income_expense_tracker/routes/: expenses.py  incomes.py
income_expense_tracker/schemas/: transaction.py
static/: styles.css
templates/: index.html
